@@ -18,7 +18,7 @@ Display program's version number and then quit\&.
 .IP "\fB\-\-name=string\fP"
 Set the name for your distribution (defaults to "Fedora")\&.
 .IP "\fB\-\-ver=string\fP"
-Set the version for your distribution (defaults to datestamp)\&.
+Set the version for your distribution (defaults to datestamp, used for $releasever in yum)\&.
 .IP "\fB\-\-flavor=string\fP"
 Set the flavor of your spin (optional)\&.
 .IP "\fB\-\-destdir=pathspec\fP"
@@ -34,6 +34,8 @@ Disable gathering of source packages (optional)\&.
 .IP "\fB\-\-nosplitmedia\fP"
 Disable creation of split media (optional)\&.
 .IP "\fB\-\-sourceisos\fP"
+Force reuse of an existing destination directory (will overwrite files)\&.
+.IP "\fB\-\-force\fP"
 Create the source media images (other arch runs must be done)\&.
 .IP "\fB\-c ksfile, \-\-config=ksfile\fP"
 Path to kickstart configuration file\&.
